# newslettersApp

./: pyproject.toml  server_list.json
newsletter_app/: gui.py  send_newsletter.py
